# foundation-building-analysis

./: .env.eample  .env_example  .gitignore  README.md  docker-foundation-building.yml  docker_foundation_building.yml  foundation_building_container.yml
backend/AWS_SAM/: .example.samconfig.toml  foundation_building_app.yaml  foundation_building_app.yml  template.yaml
backend/AWS_SAM/src/AddGroup/: handler.py
backend/AWS_SAM/src/Configuration/: handler.py
backend/AWS_SAM/src/ConfirmConfiguration/: handler.py
backend/AWS_SAM/src/ConfirmSignUp/: handler.py
backend/AWS_SAM/src/GetUser/: handler.py
backend/AWS_SAM/src/ListUserInGroup/: handler.py
backend/AWS_SAM/src/Login/: handler.py  requirements.txt
backend/AWS_SAM/src/Logout/: handler.py
backend/AWS_SAM/src/SignUp/: handler.py
backend/AWS_SAM/src/TokenRefresh/: handler.py
backend/Django_RESTFrameWork/: Dockerfile  pyproject.toml  requirements.txt
backend/Django_RESTFrameWork/Foundation_Building/: .env.example  manage.py
backend/Django_RESTFrameWork/Foundation_Building/Foundation_Building/: settings.py  urls.py
backend/Django_RESTFrameWork/Foundation_Building/mini_aws/: filters.py  models.py  paginates.py  permissions.py  serializers.py  throttling.py  urls.py  views.py
backend/Django_RESTFrameWork/Foundation_Building/mini_aws/migrations/: 0001_initial.py  0002_alter_elasticache_id.py  0002_alter_elasticache_key.py  0002_alter_elasticache_key_alter_elasticache_owner.py  0002_alter_elasticache_options.py  0003_remove_elasticache_owner.py  0003_rename_user_elasticache_user_name_and_more.py  0003_rename_userresults_usercontents_and_more.py
backend/Django_RESTFrameWork/tutorial/tutorial/: settings.py  urls.py
backend/Django_RESTFramework/: .dockerignore  Dockerfile  pyproject.toml
backend/Django_RESTFramework/Foundation_Building/Foundation_Building/: asgi.py  settings.py  urls.py  wsgi.py
backend/Django_RESTFramework/Foundation_Building/foundation_app/: apps.py  authentication.py  filters.py  models.py  pagination.py  serializers.py  throttling.py  urls.py  views.py
backend/Django_RESTFramework/Foundation_Building/foundation_app/migrations/: 0001_initial.py  0002_alter_user_user_id.py  0003_alter_relationaldata_comment_and_more.py  0004_remove_user_access_token_remove_user_expires_and_more.py
backend/Django_RESTFramework/Foundation_Building/mini_aws/: apps.py  filters.py  models.py  urls.py  views.py
backend/Django_RESTFramework/Foundation_Building/mini_aws/migrations/: 0001_initial.py
backend/SAM/: foundation_building_glue_job.yml
backend/SAM/application/Authentication/: foundation_building_authentication.yml
backend/SAM/application/FoundationApp/: foundation_building_app_foundation_app.yml  foundation_building_foundation_app.yml
backend/SAM/application/MINI_AWS/: foundation_building_app_mini_aws.yml
backend/SAM/common/: foundation_building_common.yml
backend/SAM/common/FoundationApp/: foundation_building_common.yml
backend/SAM/data/: FoundationBuilding_Glue_Job.py
backend/SAM/interface/Authentication/: foundation_building_authentication.yml  foundation_building_global_api.yml
backend/SAM/repository/: foundation_building_repository.yml
backend/SAM/web/: foundation_building_app_mini_web.yml
backend/django-rest/: Dockerfile
documents/: repository.puml
frontend/NextJs/: .env.example  .eslintrc.js  .eslintrc.json  .prettierrc.json  Dockerfile  jsconfig.json  next.config.js  package-lock.json  package.json
frontend/NextJs/src/: middleware.js
frontend/next-app/: package-lock.json  package.json
infra/CloudFormation/: foundation_building_infra.yml
infra/Nginx/: Dockerfile  nginx.conf  nginx.conf.template
script/: api_cors_origin_update.sh  api_resource_list.sh  client_secret_info.sh  logs.sh
(+151 files in other folders)
