[project]
name = "Django_RESTFrameWork"
version = "0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Foundation_Building"
version = "0.1.0"
packages = [
  { include = "Foundation_Building/Foundation_Building" },
  { include = "Foundation_Building/library" },
]
authors = ["kamegin4-aws <kamegin4@outlook.jp>"]
description = "Backend App of Foundation_Building"
readme = "README.md"
license = "MIT"
#keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.12.1"
django = "^5.0.7"
djangorestframework = "^3.15.2"
pygments = "^2.18.0"
django-filter = "^24.2"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
pymemcache = "^4.0.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"


[project.optional-dependencies]
gui = ["PyQt5"]
cli = ["rich", "click"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
#spam-cli = "spam:main_cli"

[project.gui-scripts]
#spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"
